Fixes double scroll bug.

--- a/site/css/default.css
+++ b/site/css/default.css
@@ -665,7 +665,7 @@ footer {
 
   .purple-gradient-background-bottom-left {
     width: 100%;
-    height: 900px;
+    height: 100%;
     top: 0px;
   }
 
